fix project spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -812,7 +812,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 85vw;
+	width: 88vw;
 	padding: 2em 2em;
 	margin-top: 2em;
 	margin-bottom: 2em;
@@ -833,7 +833,7 @@ a {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	width: 85vw;
+	width: 88vw;
 	padding: 2em 2em;
 	margin-top: 2em;
 	margin-bottom: 2em;
@@ -862,7 +862,7 @@ a {
 	flex-direction: column;
 	justify-content: flex-start;
 	align-items: center;
-	width: 72vw;
+	width: 75vw;
 	height: 100%;
 	margin-block: 1em;
 }
